* As suggested by Toroic, when unlocking bending, the first ability will be automatically unlocked
* Shields (air bubble/ice shield) protect from more types of damage, like explosion
* Shields don't protect from potion/poison damage, this is intentional

> Fix issues when killing entity already in ice prison
> Fix water cannon always working
> Fix radial menu controls unaffected by rebinding attack/use item controls
> Fix water arc statctrl removed when creating another water arc
> Fix crash when killing player inside ice shield
> Fix ice burst shatter icon not removed when ice shield destroyed