@@ -2,6 +2,7 @@
 * Shields (air bubble/ice shield) protect from more types of damage, like explosion
 * Shields don't protect from potion/poison damage, this is intentional
 
+> Fix crash when using server
 > Fix issues when killing entity already in ice prison
 > Fix water cannon always working
 > Fix radial menu controls unaffected by rebinding attack/use item controls
